fix getting there step title alignment

--- a/components/trip-getting-there/styles.pcss
+++ b/components/trip-getting-there/styles.pcss
@@ -26,7 +26,6 @@
 .trip-getting-there__step h6 {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
     gap: space(8);
     margin-bottom: 8px;
 }
